Updated README.md, dependencies and added version-exclusions.xml